--- a/views/desktop/css/bootstrap.css
+++ b/views/desktop/css/bootstrap.css
@@ -2121,12 +2121,26 @@ table .span24 {
 }
 .btn-warning {
   background-color: #faa732;
-  background-image: -moz-linear-gradient(top, #fbb450, #e46c0b);
-  background-image: -ms-linear-gradient(top, #fbb450, #e46c0b);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#e46c0b));
-  background-image: -webkit-linear-gradient(top, #fbb450, #e46c0b);
-  background-image: -o-linear-gradient(top, #fbb450, #e46c0b);
-  background-image: linear-gradient(top, #fbb450, #e46c0b);
+  background-image: -moz-linear-gradient(top, #e46c0b, #fbb450);
+  background-image: -ms-linear-gradient(top, #e46c0b, #fbb450);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#e46c0b), to(#fbb450));
+  background-image: -webkit-linear-gradient(top, #e46c0b, #fbb450);
+  background-image: -o-linear-gradient(top, #e46c0b, #fbb450);
+  background-image: linear-gradient(top, #e46c0b, #fbb450);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fbb450', endColorstr='#e46c0b', GradientType=0);
+  border-color: #f89406 #f89406 #ad6704;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+}
+.btn-warning2 {
+  background-color: #faa732;
+  background-image: -moz-linear-gradient(top, #fbb450, #f89406);
+  background-image: -ms-linear-gradient(top, #fbb450, #f89406);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fbb450), to(#f89406));
+  background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
+  background-image: -o-linear-gradient(top, #fbb450, #f89406);
+  background-image: linear-gradient(top, #fbb450, #f89406);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fbb450', endColorstr='#f89406', GradientType=0);
   border-color: #f89406 #f89406 #ad6704;
@@ -3955,12 +3969,13 @@ a.thumbnail:hover {
 .hero-unit {
   padding: 60px;
   margin-bottom: 30px;
-  background-color: #eeeeee;
+  background-color: #e46c0b;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
 }
 .hero-unit h1 {
+	color: #fff;
   margin-bottom: 0;
   font-size: 60px;
   line-height: 1;
