--- a/views/desktop/css/default.css
+++ b/views/desktop/css/default.css
@@ -2,6 +2,7 @@
 <!-- INCLUDE css/bootstrap.css -->
 <!-- INCLUDE css/bootstrap-responsive.css -->
 <!-- INCLUDE css/docs.css -->
+<!-- INCLUDE css/facebox.css -->
 
 body {
 	padding-top: 10px;
@@ -37,7 +38,7 @@ body {
 
 .nav-menu {
 	list-style: none;
-	margin: 40px 0;
+	margin: 25px 0;
 	padding: 0;
 	border: 0;
 	display: block;
@@ -68,8 +69,30 @@ body {
 .nav-menu-left {
 /*	margin-left: 300px;*/
 }
-
+.nav-menu-guest {
+	margin: 15px 0;
+}
+.greyScale, .colorScale {
+	width: 175px;
+	height: 125px;
+}
+.a_right {
+	text-align: right;
+}
+.hero-unit {
+	height: 198px;
+}
 .radial {
 	border-radius: 50px;
-	
+}
+.signin_top {
+	margin: 50px 0;
+}
+.orange {
+	color: #fff !important;
+}
+
+.clear {
+	clear: both;
+	display: block;
 }
