--- a/views/desktop/sign.htm
+++ b/views/desktop/sign.htm
@@ -6,37 +6,9 @@
 
 <div class="row">
 
-<div class="span3 hide-text">
-	<div class="io-small">Ideas y Oportunidades</div>
-</div>
+<div class="span4">&nbsp;</div>
 
 <div class="span4">
-	<form action="{U_SIGNIN}" method="post" id="login" class="well form-horizontal">
-		<fieldset>
-			<input type="hidden" name="lastpage" value="{REDIRECT_TO}" />
-			
-			<legend>&iquest;Ya tienes tu usuario?</legend>
-			
-			<div class="control-group">
-				<label class="control-label" for="address">{L_EMAIL}</label>
-				<div class="controls">
-					<input class="input-medium" id="address" name="address" type="text" value="">
-				</div>
-			</div>
-			
-			<div class="control-group">
-				<label class="control-label" for="key">{L_PASSWORD}</label>
-				<div class="controls">
-					<input class="input-medium" id="key" name="key" type="password" value="">
-				</div>
-			</div>
-			
-			<input class="btn btn-warning" type="submit" name="submit" value="{L_LOGIN}" />
-		</fieldset>
-	</form>
-</div>
-
-<div class="span5">
 	<form action="{U_SIGNIN}" method="post" id="login" class="form-horizontal">
 		<fieldset>
 			<input type="hidden" name="lastpage" value="{REDIRECT_TO}" />
@@ -142,6 +114,8 @@
 		</fieldset>
 	</form>
 </div>
+
+<div class="span4">&nbsp;</div>
 
 </div>
 
