--- a/views/desktop/doc.body.htm
+++ b/views/desktop/doc.body.htm
@@ -47,7 +47,7 @@
 	<div class="span6 a_right">
 		<!-- IF USER_ID == 1 -->
 		<div class="signin_top">
-		<p><a class="btn btn-warning btn-large" href="{U_SIGNIN}">Reg&iacute;strate en la Comunidad &raquo;</a></p>
+		<p><a class="btn btn-warning btn-large" href="{U_SIGNUP}">Reg&iacute;strate en la Comunidad &raquo;</a></p>
 		</div>
 		<!-- ENDIF -->
 	</div>
