--- a/views/desktop/sign.htm
+++ b/views/desktop/sign.htm
@@ -9,16 +9,16 @@
 <div class="span4">&nbsp;</div>
 
 <div class="span4">
-	<form action="{U_SIGNIN}" method="post" id="login" class="form-horizontal">
+	<form action="{U_SIGNUP}" method="post" id="signup" class="form-horizontal">
 		<fieldset>
 			<input type="hidden" name="lastpage" value="{REDIRECT_TO}" />
 			
 			<legend>Reg&iacute;strate en nuestra comunidad</legend>
 			
 			<div class="control-group">
-				<label class="control-label" for="username">{L_EMAIL}</label>
+				<label class="control-label" for="address">{L_EMAIL}</label>
 				<div class="controls">
-					<input class="input-large" id="username" name="username" type="text" value="">
+					<input class="input-large" id="address" name="address" type="text" value="">
 				</div>
 			</div>
 			
@@ -30,33 +30,35 @@
 			</div>
 			
 			<div class="control-group">
-				<label class="control-label" for="password">Nombres</label>
+				<label class="control-label" for="firstname">Nombres</label>
 				<div class="controls">
 					<input class="input-large" id="firstname" name="firstname" type="text" value="">
 				</div>
 			</div>
 			
 			<div class="control-group">
-				<label class="control-label" for="password">Apellidos</label>
+				<label class="control-label" for="lastname">Apellidos</label>
 				<div class="controls">
 					<input class="input-large" id="lastname" name="lastname" type="text" value="">
 				</div>
 			</div>
 			
+			<!-- BEGIN hide -->
 			<div class="control-group">
-				<label class="control-label" for="password">Sobrenombre</label>
+				<label class="control-label" for="alias">Sobrenombre</label>
 				<div class="controls">
 					<input class="input-large" id="alias" name="alias" type="text" value="">
 				</div>
 			</div>
+			<!-- END hide -->
 			
 			<div class="control-group">
-				<label class="control-label" for="password">Pa&iacute;s</label>
+				<label class="control-label" for="country">Pa&iacute;s</label>
 				<div class="controls">
-					<select class="input-large">
+					<select name="country" id="country" class="input-large">
 						<option>Guatemala</option>
 						<option>El Salvador</option>
-						<option>Honduras3</option>
+						<option>Honduras</option>
 						<option>Nicaragua</option>
 						<option>Costa Rica</option>
 					</select>
@@ -64,19 +66,19 @@
 			</div>
 			
 			<div class="control-group">
-				<label class="control-label" for="password">Fecha de nacimiento</label>
+				<label class="control-label" for="birthday_1">Fecha de nacimiento</label>
 				<div class="controls">
-					<select class="span1">
+					<select class="span1" name="birthday_1" id="birthday_1">
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
 					</select>
-					<select class="span1">
+					<select class="span1" name="birthday_2" id="birthday_2">
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
 					</select>
-					<select class="span1">
+					<select class="span1" name="birthday_3" id="birthday_3">
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
@@ -85,23 +87,23 @@
 			</div>
 			
 			<div class="control-group">
-				<label class="control-label" for="password">G&eacute;nero</label>
+				<label class="control-label" for="gender">G&eacute;nero</label>
 				<div class="controls">
 					<label class="radio">
-						<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+						<input type="radio" name="gender" id="gender" id="optionsRadios1" value="1" checked>
 						Masculino
 					</label>
 					<label class="radio">
-						<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+						<input type="radio" name="gender" id="optionsRadios2" value="2">
 						Femenino
 					</label>
 				</div>
 			</div>
 			
 			<div class="control-group">
-				<label class="control-label" for="password">Estdo civil</label>
+				<label class="control-label" for="status">Estado civil</label>
 				<div class="controls">
-					<select class="input-large">
+					<select name="status" id="status" class="input-large">
 						<option>Soltero</option>
 						<option>Casado</option>
 						<option>Divorciado</option>
@@ -110,7 +112,10 @@
 				</div>
 			</div>
 			
-			<input class="btn btn-danger" type="submit" name="submit" value="{L_CONFIRM}" />
+			<div class="centered">
+				<input class="btn btn-danger" type="submit" name="submit" value="{L_CONFIRM}" />
+				<div class="loader"></div>
+			</div>
 		</fieldset>
 	</form>
 </div>
@@ -118,5 +123,31 @@
 <div class="span4">&nbsp;</div>
 
 </div>
+
+<script language="javascript">
+$(document).ready(function() {
+	// Esta primera parte crea un loader no es necesaria
+	$().ajaxStart(function() {
+		$('.loader').show();
+		$('.loader').hide();
+	}).ajaxStop(function() {
+		$('.loader').hide();
+		$('.loader').fadeIn('slow');
+	});
+	
+	$('#signup').submit(function() {
+		$.ajax({
+			type: 'POST',
+			url: $(this).attr('action'),
+			data: $(this).serialize(),
+			success: function(data) {
+				$('#result').html(data);
+			}
+		});
+		
+		return false;
+	}); 
+})  
+</script>
 
 <!-- INCLUDE doc.foot.htm -->
