--- a/views/desktop/sign.htm
+++ b/views/desktop/sign.htm
@@ -66,19 +66,19 @@
 			</div>
 			
 			<div class="control-group">
-				<label class="control-label" for="birthday_1">Fecha de nacimiento</label>
+				<label class="control-label" for="birthday_day">Fecha de nacimiento</label>
 				<div class="controls">
-					<select class="span1" name="birthday_1" id="birthday_1">
+					<select class="span1" name="birthday_day" id="birthday_day">
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
 					</select>
-					<select class="span1" name="birthday_2" id="birthday_2">
+					<select class="span1" name="birthday_month" id="birthday_month">
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
 					</select>
-					<select class="span1" name="birthday_3" id="birthday_3">
+					<select class="span1" name="birthday_year" id="birthday_year">
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
