--- a/views/desktop/informate.htm
+++ b/views/desktop/informate.htm
@@ -3,43 +3,43 @@
 <ul class="thumbnails">
 	<li class="span2">
 		<a class="btn" href="{U_NEWS}">
-		<p><img class="colorScale" src="http://www.io.com/media/informate.png" alt="" /></p>
+		<p><img class="colorScale" src="/media/informate.png" alt="" /></p>
 		<h3>Noticias</h3>
 		</a>
 	</li>
 	
 	<li class="span2">
 		<a class="btn" href="{U_BLOG}">
-		<p><img class="colorScale" src="http://www.io.com/media/board.png" alt="" /></p>
+		<p><img class="colorScale" src="/media/blog.png" alt="" /></p>
 		<h3>Blog</h3>
 		</a>
 	</li>
 	
 	<li class="span2">
 		<a class="btn" href="{U_BOARD}">
-		<p><img class="colorScale" src="http://www.io.com/media/blog.png" alt="" /></p>
+		<p><img class="colorScale" src="/media/foros.png" alt="" /></p>
 		<h3>Foros</h3>
 		</a>
 	</li>	
 	
 	<li class="span2">
 		<a class="btn" href="{U_TV}">
-		<p><img class="colorScale" src="http://www.io.com/media/tv.png" alt="" /></p>
+		<p><img class="colorScale" src="/media/tv.png" alt="" /></p>
 		<h3>Televis&oacute;n</h3>
 		</a>
 	</li>
 	
 	<li class="span2">
 		<a class="btn" href="#">
-		<p><img class="colorScale" src="http://www.io.com/media/galeria.png" alt="" /></p>
-		<h3>Galer&iacute;a de IO</h3>
+		<p><img class="greyScale" src="/media/galeria.png" alt="" /></p>
+		<h3>Galer&iacute;a</h3>
 		</a>
 	</li>
 	
 	<li class="span2">
 		<a class="btn" href="#">
-		<p><img class="colorScale" src="http://www.io.com/media/eventos.png" alt="" /></p>
-		<h3>Eventos</h3>
+		<p><img class="greyScale" src="/media/eventos.png" alt="" /></p>
+		<h3>Actividades</h3>
 		</a>
 	</li>
 </ul>
