--- a/views/desktop/news.htm
+++ b/views/desktop/news.htm
@@ -13,7 +13,7 @@
 		<div id="myCarousel" class="carousel slide">
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="http://twitter.github.com/bootstrap/assets/img/bootstrap-mdo-sfmoma-01.jpg" alt="">
+					<a href="http://www.google.com/"><img src="http://twitter.github.com/bootstrap/assets/img/bootstrap-mdo-sfmoma-01.jpg" alt=""></a>
 					<div class="carousel-caption">
 						<h4>Que tanta diferencia marca la innovacion?</h4>
 						<p>En el último ranking mundial realizado por la revista Forbes, se publicó una lista de las que se consideraban las 100 empresas más innovadoras en todos los campos.</p>
