--- a/views/desktop/sign.htm
+++ b/views/desktop/sign.htm
@@ -8,7 +8,7 @@
 </div>
 <!-- ELSE -->
 <!-- BEGIN error -->
-<div class="red a-center">{error.MESSAGE}</div>
+<div class="alert alert-error">{error.MESSAGE}</div>
 <!-- END error -->
 
 <div class="row">
