--- a/views/desktop/home.htm
+++ b/views/desktop/home.htm
@@ -11,7 +11,7 @@
 		<div class="hero-unit">
 			<h1 class="orange">&iexcl;&iexcl;S&Uacute;MATE!!</h1>
 			<p>&nbsp;</p>
-			<p>Somos la comunidad de emprendedores e innovadores, donde podras descubrir QUE, COMO y POR QU&Eacute;, ser un emprendedor!</p>
+			<p class="orange">Somos la comunidad de emprendedores e innovadores, donde podras descubrir QUE, COMO y POR QU&Eacute;, ser un emprendedor!</p>
 		</div>
 	</div>
 </div>
