--- a/views/desktop/doc.body.htm
+++ b/views/desktop/doc.body.htm
@@ -44,13 +44,23 @@
 		<!-- END nav -->
 	</div>
 	
-	<div class="span6 a_right">
-		<!-- IF USER_ID == 1 -->
-		<div class="signin_top">
-		<p><a class="btn btn-warning btn-large" href="{U_SIGNUP}">Reg&iacute;strate en la Comunidad &raquo;</a></p>
+	<!-- IF USER_ID == 1 -->
+	<div class="hidden-phone">
+		<div class="span6 a_right">
+			<div class="signin_top">
+			<a class="btn btn-warning btn-large" href="{U_SIGNUP}">Reg&iacute;strate en la Comunidad &raquo;</a>
+			</div>
 		</div>
-		<!-- ENDIF -->
 	</div>
+	
+	<div class="span6 visible-phone">
+		<span class="clear"></span>
+		
+		<div class="login-top">
+		<a class="btn btn-warning btn-large full-width" href="{U_SIGNUP}">Reg&iacute;strate en la Comunidad &raquo;</a>
+		</div>
+	</div>
+	<!-- ENDIF -->
 </div>
 
 <br />
