--- a/views/desktop/home.htm
+++ b/views/desktop/home.htm
@@ -25,6 +25,13 @@
 	</li>
 	
 	<li class="span2">
+		<a class="btn" href="{U_EMPLEATE}">
+		<p><img class="colorScale" src="/media/empleate.png" alt="" /></p>
+		<h3>EmpleaTE</h3>
+		</a>
+	</li>
+	
+	<li class="span2">
 		<a class="btn" href="#soon" rel="facebox">
 		<p><img class="greyScale" src="/media/integrate.png" alt="" /></p>
 		<h3>IntegraTE</h3>
@@ -42,13 +49,6 @@
 		<a class="btn" href="#soon" rel="facebox">
 		<p><img class="greyScale" src="/media/educate.png" alt="" /></p>
 		<h3>EducaTE</h3>
-		</a>
-	</li>
-	
-	<li class="span2">
-		<a class="btn" href="#soon" rel="facebox">
-		<p><img class="greyScale" src="/media/empleate.png" alt="" /></p>
-		<h3>EmpleaTE</h3>
 		</a>
 	</li>
 	
